--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -1459,7 +1459,7 @@ function gameLoop(timestamp) {
                 isSimulationRunning = !isSimulationRunning;
                 simulationSpeed = 1;
                 updateSpeedIndicator();
-                updateButtonStyles
+                updateButtonStyles();
                 startGameLoop();
             });
             btnFf.addEventListener('click', () => {
