--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -247,7 +247,39 @@ We may suspend or terminate your access to the Services immediately and without 
   </pre>
   <button id="tos-accept-btn" class="control-btn selected" style="margin-top:1rem;">ACCEPT</button>
 </div>
+	
+<!-- Help Modal -->
+<div id="help-modal"
+     style="
+        position:fixed; inset:0;
+        background:rgba(0,0,0,0.95); color:#0f0;
+        z-index:9997;
+        display:none; flex-direction:column;
+        align-items:center; justify-content:flex-start;
+        overflow-y:auto; padding:1rem;
+        font-family:'Share Tech Mono',monospace;
+     ">
+  <pre style="white-space:pre-wrap; max-width:60ch;">
+Maneuver Simulator Tutorial
 
+Radar Display
+- The circular radar shows your ship at the center.
+- Click a track to select it; paused simulations let you drag tracks.
+
+Track Controls
+- Play/Pause starts or stops the scenario.
+- Fast Forward and Rewind cycle simulation speed.
+- + / - add or drop tracks.
+- WIND, RM V and CPA toggle wind, relative motion vectors and CPA data.
+- Vector Time cycles 5/15/30 min and Range cycles radar range.
+
+Data Panels
+- Right side panels show own ship, selected track, relative motion and CPA.
+  Panels update as the simulation runs.
+  </pre>
+  <button id="help-close-btn" class="control-btn selected" style="margin-top:1rem;">CLOSE</button>
+</div>
+	
 <script>
 	/* ✧✧✧ 2️⃣  DEVICE-GUARD SCRIPT ✧✧✧ */
 	(function () {
@@ -353,7 +385,12 @@ We may suspend or terminate your access to the Services immediately and without 
             <!-- Button Group 3 -->
             <button id="btn-range" class="control-btn selected" data-tooltip="Toggle Radar Range">9.0</button>
         </div>
+	    
+            <span class="w-full border-t border-gray-600"></span>
 
+            <!-- Help Button -->
+            <button id="btn-help" class="control-btn" data-tooltip="Show Instructions">HELP</button>
+	    
         <!-- Center Pane: Radar Display -->
         <div id="radar-container" class="flex-grow p-4 flex items-center justify-center relative">
             <canvas id="radarCanvas"></canvas>
@@ -398,6 +435,9 @@ We may suspend or terminate your access to the Services immediately and without 
             const btnRev = document.getElementById('btn-rev');
             const ffSpeedIndicator = document.getElementById('ff-speed-indicator');
             const revSpeedIndicator = document.getElementById('rev-speed-indicator');
+            const btnHelp = document.getElementById('btn-help');
+            const helpModal = document.getElementById('help-modal');
+            const helpCloseBtn = document.getElementById('help-close-btn');
 
             // --- UI Elements for Scaling ---
             const buttonBar = document.getElementById('button-bar');
@@ -1484,6 +1524,14 @@ function gameLoop(timestamp) {
             btnAddTrack.addEventListener('click', addTrack);
             btnDropTrack.addEventListener('click', dropTrack);
             btnScen.addEventListener('click', setupRandomScenario);
+		            btnHelp.addEventListener('click', () => {
+                helpModal.style.display = 'flex';
+                document.documentElement.style.overflow = 'hidden';
+            });
+            helpCloseBtn.addEventListener('click', () => {
+                helpModal.style.display = 'none';
+                document.documentElement.style.overflow = '';
+            });
             initialize(); // Initial load of the application
             startGameLoop(); // Start the main loop when ready
         });
