--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -251,7 +251,7 @@ We may suspend or terminate your access to the Services immediately and without 
 <!-- Help Modal -->
 <div id="help-modal"
      style="
-        position:fixed; top:0; left:0; width:80px;
+        position:fixed; top:0; left:30; width:160px;
         background:rgba(0,0,0,0.95); color:#0f0;
         z-index:9997;
         display:none; flex-direction:column;
@@ -264,13 +264,17 @@ Maneuver Simulator Tutorial
 
 Radar Display
 - The circular radar shows your ship at the center.
-- Click a track to select it; paused simulations let you drag tracks.
+- Click or tap a track to select it.
+- Change the course or speed of your ship, or a track by dragging and dropping the tip of it's vector.
+- Change the bearing, range of a track by dragging and dropping the track symbol.
+- When enabled, change the direction of True Wind by dragging and dropping the "W" symbol.
+- When enabled, change the speed of True Wind by dragging and dropping the tip of it's vector.
 
 Track Controls
 - Play/Pause starts or stops the scenario.
 - Fast Forward and Rewind cycle simulation speed.
 - + / - add or drop tracks.
-- WIND, RM V and CPA toggle wind, relative motion vectors and CPA data.
+- WIND, RM V and CPA toggle wind, relative motion vectors/data and CPA data.
 - Vector Time cycles 5/15/30 min and Range cycles radar range.
 
 Data Panels
