--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maneuver</title>
-    <link rel="icon" type="image/svg+xml" href="favicons.svg">
+    <link rel="licon" type="image/svg+xml" href="favicons.svg">
     
     <!-- Tailwind CSS for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -251,13 +251,14 @@ We may suspend or terminate your access to the Services immediately and without 
 <!-- Help Modal -->
 <div id="help-modal"
      style="
-        position:fixed; top:0; left:30; width:500px;
+        position:fixed; top:10%; left:10%; width:40vw; height:60vh;
         background:rgba(0,0,0,0.95); color:#0f0;
         z-index:9997;
         display:none; flex-direction:column;
         align-items:center; justify-content:flex-start;
-        overflow-y:auto; padding:1rem;
+        overflow:auto; padding:1rem;
         font-family:'Share Tech Mono',monospace;
+        resize:both;
      ">
   <pre style="white-space:pre-wrap; max-width:60ch;">
 Maneuver Simulator Tutorial
@@ -442,6 +443,13 @@ Data Panels
             const btnHelp = document.getElementById('btn-help');
             const helpModal = document.getElementById('help-modal');
             const helpCloseBtn = document.getElementById('help-close-btn');
+            const helpContent = helpModal.querySelector('pre');
+            new ResizeObserver(() => {
+                const scale = Math.max(0.8, Math.min(1.2, helpModal.clientWidth / 500));
+                helpContent.style.fontSize = `${1 * scale}rem`;
+                helpCloseBtn.style.fontSize = `${0.9 * scale}rem`;
+                helpCloseBtn.style.padding = `${0.5 * scale}rem`;
+            }).observe(helpModal);
 
             // --- UI Elements for Scaling ---
             const buttonBar = document.getElementById('button-bar');
@@ -1529,10 +1537,11 @@ function gameLoop(timestamp) {
             btnDropTrack.addEventListener('click', dropTrack);
             btnScen.addEventListener('click', setupRandomScenario);
             btnHelp.addEventListener('click', () => {
-                const rect = btnHelp.getBoundingClientRect();
                 helpModal.style.display = 'flex';
-                helpModal.style.left = `${rect.right}px`;
-                helpModal.style.top = `${rect.top}px`;
+                const left = (window.innerWidth  - helpModal.offsetWidth)  / 2;
+                const top  = (window.innerHeight - helpModal.offsetHeight) / 2;
+                helpModal.style.left = `${Math.max(0, left)}px`;
+                helpModal.style.top  = `${Math.max(0, top)}px`;
             });
             helpCloseBtn.addEventListener('click', () => {
                 helpModal.style.display = 'none';
