--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -136,15 +136,8 @@
             position: absolute;
             top: 0.5rem;
             right: 0.5rem;
-        }
-        #help-scroll-hint {
-            position: absolute;
-            bottom: 0.25rem;
-            width: 100%;
-            text-align: center;
-            font-size: 0.9rem;
-            color: var(--radar-faint-green);
-            pointer-events: none;
+            transform: scaleX(0.8);
+            transform-origin: top right;
         }
     </style>
 </head>
@@ -304,7 +297,6 @@ Questions?  >>  Aheadflank.ai@gmail.com
 > Right side panels show own ship, selected track, relative motion and CPA.
 > Panels update as the simulation runs.
   </pre>
-  <div id="help-scroll-hint">&#x25BC; SCROLL &#x25BC;</div>
 </div>
 	
 <script>
