--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -138,6 +138,7 @@
             right: 0.5rem;
             transform: scaleX(0.8);
             transform-origin: top right;
+            width: 10%;
         }
     </style>
 </head>
