--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -1518,6 +1518,21 @@ function gameLoop(timestamp) {
                 canvas.addEventListener('pointerleave', handlePointerUp);
                 canvas.addEventListener('pointercancel', handlePointerUp);
                 canvas.addEventListener('pointermove', handlePointerMove);
+            } else if ('ontouchstart' in window) {
+                const wrap = (handler) => (e) => {
+                    const touch = e.touches[0] || e.changedTouches[0];
+                    if (!touch) return;
+                    handler({
+                        clientX: touch.clientX,
+                        clientY: touch.clientY,
+                        button: 0
+                    });
+                    e.preventDefault();
+                };
+                canvas.addEventListener('touchstart', wrap(handlePointerDown), { passive: false });
+                canvas.addEventListener('touchmove', wrap(handlePointerMove), { passive: false });
+                canvas.addEventListener('touchend', wrap(handlePointerUp));
+                canvas.addEventListener('touchcancel', wrap(handlePointerUp));
             } else {
                 canvas.addEventListener('mousedown', handlePointerDown);
                 canvas.addEventListener('mouseup', handlePointerUp);
