--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -73,6 +73,8 @@
              height: 100vh;
              height: calc(var(--vh, 1vh) * 100);
              gap: 40px;             /* space between control, radar and data panes */
+             width: 100vw;          /* prevent flex width overflow */
+             overflow: hidden;      /* hide any excess due to scaling */
         }
         
         /* Button Styling */
