--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -73,7 +73,7 @@
              height: 100vh;
              height: calc(var(--vh, 1vh) * 100);
              gap: 40px;             /* space between control, radar and data panes */
-             width: 100vw;          /* prevent flex width overflow */
+             width: 100%;           /* follow viewport width */
              overflow: hidden;      /* hide any excess due to scaling */
         }
         
