--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maneuver</title>
-    <link rel="licon" type="image/svg+xml" href="favicons.svg">
+    <link rel="icon" type="image/svg+xml" href="favicons.svg">
     
     <!-- Bootstrap CSS for styling -->
     <link
@@ -441,9 +441,9 @@ Questions?  >>  Aheadflank.ai@gmail.com
         </div>
 	
         <!-- Right Pane -->
-        <div id="right-pane" class="d-flex flex-column justify-content-between flex-shrink-0 pt-4 pr-4 pl-4 pb-0 text-radar-green">
+        <div id="right-pane" class="d-flex flex-column justify-content-between flex-shrink-0 pt-4 pe-4 ps-4 pb-0 text-radar-green">
             <div id="sim-clock" class="text-center">00:00:00</div>
-            <div id="data-pane" class="d-flex flex-column gap-8 overflow-auto">
+            <div id="data-pane" class="d-flex flex-column gap-4 overflow-auto">
                 <!-- OwnShip Data -->
                 <div>
                     <p class="font-bold tracking-wide data-title">OwnShip</p>
