--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -441,7 +441,7 @@ Questions?  >>  Aheadflank.ai@gmail.com
         </div>
 	
         <!-- Right Pane -->
-        <div id="right-pane" class="d-flex flex-column justify-content-between flex-shrink-0 pt-4 pe-4 ps-4 pb-0 text-radar-green">
+        <div id="right-pane" class="d-flex flex-column justify-content-between flex-shrink-0 pt-4 pe-4 ps-4 pb-0 text-radar-green ms-auto">
             <div id="sim-clock" class="text-center">00:00:00</div>
             <div id="data-pane" class="d-flex flex-column gap-4 overflow-auto">
                 <!-- OwnShip Data -->
