--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -458,10 +458,9 @@ Questions?  >>  Aheadflank.ai@gmail.com
         </div>
 	
         <!-- Right Pane -->
-        <div id="right-pane" class="d-flex flex-column justify-content-between pt-4 pe-4 ps-4 pb-0 text-radar-green ms-auto">
-
+                <div id="right-pane" class="d-flex flex-column justify-content-between pt-4 pe-4 ps-4 pb-0 text-radar-green" style="margin-left: 10px;">
             <div id="sim-clock" class="text-center">00:00:00</div>
-            <div id="data-pane" class="d-flex flex-column gap-4 overflow-auto" style="maxwidth": 600px; padding: 16.0711px; gap: 32.1422px;"></div>
+            <div id="data-pane" class="d-flex flex-column gap-4 overflow-auto" ></div>
                 <!-- OwnShip Data -->
                 <div>
                     <p class="font-bold tracking-wide data-title">OwnShip</p>
