--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -466,14 +466,14 @@ Questions?  >>  Aheadflank.ai@gmail.com
 	    
         <!-- Center Pane: Radar Display -->
         <div id="radar-wrapper" class="flex-grow-1 p-4 d-flex align-items-center justify-content-center position-relative">
-            <div id="wind-data-display" class="position-absolute start-50 translate-middle-x text-center text-radar-green" style="z-index: 30;"></div>
+        <div id="radar-wrapper" class="flex-grow-1 p-4 d-flex align-items-center justify-content-center position-relative" style="padding-left:0.6rem;padding-right:0.6rem;">
             <div id="radar-container" class="d-flex align-items-center justify-content-center position-relative">
                 <canvas id="radarCanvas"></canvas>
             </div>
         </div>
 	
         <!-- Right Pane -->
-        <div id="right-pane" class="d-flex flex-column justify-content-between pt-4 pe-4 ps-4 pb-0 text-radar-green" style="margin-left: 10px;">
+        <div id="right-pane" class="d-flex flex-column justify-content-between pt-4 pe-4 ps-4 pb-0 text-radar-green">
             <div id="sim-clock" class="text-center">00:00:00</div>
             <div id="data-pane" class="d-flex flex-column gap-4 overflow-auto" >
                 <!-- OwnShip Data -->
