--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -465,8 +465,8 @@ Questions?  >>  Aheadflank.ai@gmail.com
         </div>
 	    
         <!-- Center Pane: Radar Display -->
-        <div id="radar-wrapper" class="flex-grow-1 p-4 d-flex align-items-center justify-content-center position-relative">
         <div id="radar-wrapper" class="flex-grow-1 p-4 d-flex align-items-center justify-content-center position-relative" style="padding-left:0.6rem;padding-right:0.6rem;">
+            <div id="wind-data-display" class="position-absolute start-50 translate-middle-x text-center text-radar-green" style="z-index: 30;"></div>
             <div id="radar-container" class="d-flex align-items-center justify-content-center position-relative">
                 <canvas id="radarCanvas"></canvas>
             </div>
