--- a/Maneuver-Simulator-App/index.html
+++ b/Maneuver-Simulator-App/index.html
@@ -884,7 +884,7 @@ Questions?  >>  Aheadflank.ai@gmail.com
 
                 // Display relative motion data, or placeholders if toggled off or no track selected
                 const showRM = selectedTrack && showRelativeMotion;
-                rmDataContainer.innerHTML = `<p class="font-bold tracking-wide data-title">Relative Motion</p>
+                rmDataContainer.innerHTML = `<p class="font-bold tracking-wide data-title">Rel Motion</p>
                     <div class="mt-2 ps-2 d-flex flex-column gap-1">
                         <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Direction RM</span><span class="data-value text-end">${showRM ? selectedTrack.rm.dir : '--'}</span></div>
                         <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Spd RM</span><span class="data-value text-end">${showRM ? selectedTrack.rm.spd : '--'}</span></div>
